Regression: Erratic undo behaviors with hidden faces in Sculpt and Vertex/Weight Paint modes #100494

Closed
opened 2022-08-19 10:29:09 +02:00 by Sun Kim · 7 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.8.1.220810

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 23:03, hash: f5aac6662d
Worked: 3.4.0 August 11 build fb7ef40006b9

Likely caused by 2480b55f21

Short description of error
Sculpt and Vertex/Weight Paint modes show erratic undo behaviors with hidden faces.

  • Sculpt mode: hidden face states get jumbled with undo
  • Vertex/Weight Paint modes: hidden face states disappear with undo

HiddenFacesUndo.mp4

Exact steps for others to reproduce the error
Sculpt mode:

  • Paint mask
  • Sculpt > Hide Masked
  • Undo

Vertex/Weight Paint mode:

  • Hide some faces in Edit mode
  • Switch to Vertex or Weight Paint modes
  • Do some strokes
  • Undo
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.8.1.220810 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 23:03, hash: `f5aac6662d` Worked: 3.4.0 August 11 build `fb7ef40006b9` Likely caused by 2480b55f21 **Short description of error** Sculpt and Vertex/Weight Paint modes show erratic undo behaviors with hidden faces. - Sculpt mode: hidden face states get jumbled with undo - Vertex/Weight Paint modes: hidden face states disappear with undo [HiddenFacesUndo.mp4](https://archive.blender.org/developer/F13403565/HiddenFacesUndo.mp4) **Exact steps for others to reproduce the error** Sculpt mode: - Paint mask - Sculpt > Hide Masked - Undo Vertex/Weight Paint mode: - Hide some faces in Edit mode - Switch to Vertex or Weight Paint modes - Do some strokes - Undo
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Omar Emara changed title from Erratic undo behaviors with hidden faces in Sculpt and Vertex/Weight Paint modes to Regression: Erratic undo behaviors with hidden faces in Sculpt and Vertex/Weight Paint modes 2022-08-19 11:04:11 +02:00
Member

Added subscribers: @HooglyBoogly, @OmarEmaraDev

Added subscribers: @HooglyBoogly, @OmarEmaraDev
Member

It seems the commit listed is the cause indeed. So also adding Hans.

It seems the commit listed is the cause indeed. So also adding Hans.
Hans Goudey self-assigned this 2022-08-19 14:43:12 +02:00

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

This issue was referenced by a6056b870b

This issue was referenced by a6056b870b1da9bf422920439897a5cf8616c925
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100494
No description provided.